package knime;

option java_package = "org.knime.python.kernel.proto";
option java_outer_classname = "ProtobufPythonKernelCommand";

import "table.proto";
import "sqlInput.proto";
import "sqlOutput.proto";
import "variables.proto";

message Command {
	optional Execute execute = 1;
	optional PutFlowVariables putFlowVariables = 2;
	optional PutTable putTable = 3;
	optional AppendToTable appendToTable = 4;
	optional GetTable getTable = 5;
	optional ListVariables listVariables = 6;
	optional Reset reset = 7;
	optional HasAutoComplete hasAutoComplete = 8;
	optional AutoComplete autoComplete = 9;
	optional GetImage getImage = 10;
	optional GetObject getObject = 11;
	optional PutObject putObject = 12;
	optional AddSerializers addSerializers = 13;
	optional AddDeserializers addDeserializers = 14;
	optional Shutdown shutdown = 15;
	optional PutSQL putSQL = 16;
	optional GetSQL getSQL = 17;
	optional GetFlowVariables getFlowVariables = 18;
	
	message Execute {
		required string sourceCode = 1;
	}
	
	message PutFlowVariables {
		required string key = 1;
		required Variables variables = 2;
	}
	
	message PutTable {
		required string key = 1;
		required Table table = 2;
	}
	
	message AppendToTable {
		required string key = 1;
		required Table table = 2;
	}
	
	message GetTable {
		required string key = 1;
		required int32 chunkSize = 2;
	}
	
	message ListVariables {
	}
	
	message Reset {
	}
	
	message HasAutoComplete {
	}
	
	message AutoComplete {
		required string sourceCode = 1;
		required int32 line = 2;
		required int32 column = 3;
	}
	
	message GetImage {
		required string key = 1;
	}
	
	message GetObject {
		required string key = 1;
	}
	
	message PutObject {
		required string key = 1;
		required bytes pickledObject = 2;
	}
	
	message AddSerializers {
		repeated Serializer serializer = 1;
	}
	
	message Serializer {
		required string id = 1;
		required string type = 2;
		required string path = 3;
	}
	
	message AddDeserializers {
		repeated Deserializer deserializer = 1;
	}
	
	message Deserializer {
		required string id = 1;
		required string path = 2;
	}
	
	message Shutdown {
	}
	
    message PutSQL {
        required string key = 1;
        required SQLInput sql = 2;
    }
    
    message GetSQL {
        required string key = 1;
    }
    
    message GetFlowVariables {
		required string key = 1;
    }
    
}
